--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ asgiref==3.2.7
 Django==3.0.6
 psycopg2==2.8.5
 pytz==2020.1
+redis==3.5.2
+redispy==3.0.0
 sqlparse==0.3.1
 uWSGI==2.0.18
-
-redis~=3.5.2
